[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pydsm"
description = "For loading data from DSM2 hdf5 files into pandas DataFrame"
readme = "README.md"
authors = [
    {name = "Nicky Sandhu", email = "psandhu@water.ca.gov"},
]
requires-python = ">=3.7"
license = {text = "MIT license"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
]
keywords = ["pydsm"]
dependencies = [
    "Click",
    "networkx",
    "h5py",
    "pyhecdss",
    "vtools3",
    "pandas",
    "numba",
    "diskcache",
    "tabulate",
]
dynamic = ["version"]

[project.scripts]
pydsm = "pydsm.cli:main"

[project.urls]
Homepage = "https://github.com/CADWRDeltaModeling/pydsm"
Issues = "https://github.com/CADWRDeltaModeling/pydsm/issues"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
include = ["pydsm", "pydsm.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools_scm]
write_to = "pydsm/_version.py"

[tool.setuptools.package-data]
"*" = ["*.rst", "*.txt"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "*.pyo", "*.pyd", "__pycache__/*"]

[project.optional-dependencies]
# Install viz extras with:  pip install "pydsm[viz]"
viz = [
    "geopandas",
    "shapely",
]
# Install test extras with:  pip install "pydsm[test]"
test = [
    "pytest>=7",
    "pytest-cov",
    "pyarrow",
]
# Install docs extras with:  pip install "pydsm[docs]"
docs = [
    "sphinx",
    "nbsphinx",
    "sphinx-rtd-theme",
    "jupyter",
    "nbconvert",
    "pandoc",
    "sphinx-autobuild",
]
# Install all dev extras with:  pip install "pydsm[dev]"
dev = [
    "pydsm[test]",
    "pydsm[docs]",
    "black",
    "flake8",
    "coverage",
    "twine",
    "setuptools_scm>=6.2",
    "towncrier",
]

[tool.towncrier]
filename = "HISTORY.rst"
directory = "changelog.d"
title_format = "{version} ({project_date})"
issue_format = "`#{issue} <https://github.com/CADWRDeltaModeling/pydsm/issues/{issue}>`_"
underlines = ["-", "~", "^"]

[[tool.towncrier.type]]
directory = "feat"
name = "New Features"
showcontent = true

[[tool.towncrier.type]]
directory = "fix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "docs"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous"
showcontent = true
